--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -1,10 +1,4 @@
 # Starter pipeline
-- task: netsparker-cloud@1
-  inputs:
-    apiConnection: 'Invicti Enterprise Service Connection'
-    scanTypes: '0'
-    scanWebSites: '790e9168-da43-41a7-0eda-affc014f46ef'
-    scanWebSitesProfile: 'be77a7e7-73fc-4231-b2ee-affc0168e73c'
 # Start with a minimal pipeline that you can customize to build and deploy your code.
 # Add steps that build, run tests, deploy, and more:
 # https://aka.ms/yaml
@@ -23,3 +17,12 @@ steps:
     echo Add other tasks to build, test, and deploy your project.
     echo See https://aka.ms/yaml
   displayName: 'Run a multi-line script'
+- task: netsparker-cloud@1
+  inputs:
+    apiConnection: 'Invicti Enterprise Service Connection'
+    scanTypes: '2'
+    scanWebSites: '790e9168-da43-41a7-0eda-affc014f46ef'
+    scanWebSitesProfile: 'be77a7e7-73fc-4231-b2ee-affc0168e73c'
+    buildFail: true
+    severity: 'Critical'
+    stopScan: true
